trying to fix background which is not visible

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -366,7 +366,6 @@ h3 span{
 /* feedback section */
 .feedback {
     background-image: url('/images/clip.jpg');
-    filter: opacity(100%);
     display: flex;
     height: 570px;
     justify-content: center;
